# redis-tui

./: Cargo.toml  README.md
src/: app.rs  args.rs  event.rs  main.rs  redis.rs  tui.rs  ui.rs  update.rs
src/ui/: about.rs  home.rs  mod.rs
