[package]
name = "redis-tui"
version = "0.1.0"
authors = ["Dead Poet Spoon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.27.0"
ratatui = "0.24.0"
redis = "0.24.0"
